--- a/packages/zitadel-config/compositions/post-config-init/test/providers.yaml
+++ b/packages/zitadel-config/compositions/post-config-init/test/providers.yaml
@@ -5,3 +5,11 @@ metadata:
   name: provider-kubernetes
 spec:
   package: ghcr.io/mojaloop/infra/crossplane-contrib/provider-kubernetes:v0.18.0
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-zitadel
+spec:
+  package: ghcr.io/infitx-org/zitadel-crossplane-provider:v0.0.1
