fix: move secret creation to vault ns

--- a/packages/vault-config/compositions/env-config/test/scenarios/standard/claim.yaml
+++ b/packages/vault-config/compositions/env-config/test/scenarios/standard/claim.yaml
@@ -7,6 +7,7 @@ spec:
     environments: "dev,staging,prod"
     kvPath: "secret"
     envTokenTTL: "14d"
+    namespace: "vault"
   providerConfigsRef:
     vaultProvider: provider-vault
     kubernetesProvider: provider-kubernetes
